--- a/3DModelingViewer/3DModelingViewer/Base.lproj/Main.storyboard
+++ b/3DModelingViewer/3DModelingViewer/Base.lproj/Main.storyboard
@@ -22,28 +22,54 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BrB-h1-WRS">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="547"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="525"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="BrB-h1-WRS" secondAttribute="height" multiplier="375:547" id="Hoa-A7-axF"/>
+                                            <constraint firstAttribute="width" secondItem="BrB-h1-WRS" secondAttribute="height" multiplier="5:7" id="Hoa-A7-axF"/>
                                         </constraints>
                                     </arscnView>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="PXG-2x-42r">
-                                        <rect key="frame" x="0.0" y="547" width="375" height="120"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="HBa-6E-u45">
-                                            <size key="itemSize" width="102" height="104"/>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="S1y-Vi-7aN">
+                                        <rect key="frame" x="0.0" y="525" width="375" height="142"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yz0-4Y-z2j">
+                                            <size key="itemSize" width="50" height="50"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" id="DD0-X2-na3">
-                                                <rect key="frame" x="0.0" y="8" width="102" height="104"/>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" reuseIdentifier="modelingCell" id="xqi-K3-8E2" customClass="ModelingCell" customModule="_DModelingViewer" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="102" height="104"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                     <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="kER-km-cC9">
+                                                            <rect key="frame" x="-30" y="-75" width="110" height="200"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RX2-gU-Sba">
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" secondItem="RX2-gU-Sba" secondAttribute="height" multiplier="3:2" id="d2R-2B-zAN"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p1r-QI-Qzi">
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <color key="backgroundColor" red="1" green="0.89433101230000001" blue="0.58015469470000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        </stackView>
+                                                    </subviews>
                                                 </view>
+                                                <color key="backgroundColor" red="1" green="0.89433101230000001" blue="0.58015469470000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstItem="kER-km-cC9" firstAttribute="width" secondItem="xqi-K3-8E2" secondAttribute="width" id="5Oa-rN-Rz3"/>
+                                                    <constraint firstItem="kER-km-cC9" firstAttribute="height" secondItem="xqi-K3-8E2" secondAttribute="height" id="Aur-jm-Mqc"/>
+                                                </constraints>
+                                                <connections>
+                                                    <outlet property="modelImageView" destination="RX2-gU-Sba" id="xjV-o6-7wc"/>
+                                                    <outlet property="modelLabel" destination="p1r-QI-Qzi" id="oxm-jM-Yto"/>
+                                                </connections>
                                             </collectionViewCell>
                                         </cells>
                                     </collectionView>
@@ -52,7 +78,7 @@
                                     <constraint firstAttribute="trailing" secondItem="BrB-h1-WRS" secondAttribute="trailing" id="GfU-md-TuW"/>
                                     <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="en9-2C-KR3" secondAttribute="top" id="Jgq-Co-B1U"/>
                                     <constraint firstItem="BrB-h1-WRS" firstAttribute="leading" secondItem="en9-2C-KR3" secondAttribute="leading" id="NVU-6p-wXI"/>
-                                    <constraint firstItem="PXG-2x-42r" firstAttribute="centerX" secondItem="en9-2C-KR3" secondAttribute="centerX" id="vW0-Ll-gOT"/>
+                                    <constraint firstItem="S1y-Vi-7aN" firstAttribute="centerX" secondItem="en9-2C-KR3" secondAttribute="centerX" id="dAr-mQ-uhP"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -66,7 +92,7 @@
                         <viewLayoutGuide key="safeArea" id="fQZ-KI-GVf"/>
                     </view>
                     <connections>
-                        <outlet property="collectionView" destination="PXG-2x-42r" id="fhE-iJ-Rxh"/>
+                        <outlet property="collectionView" destination="S1y-Vi-7aN" id="vEd-vZ-tcK"/>
                         <outlet property="sceneView" destination="BrB-h1-WRS" id="5nT-qQ-ynl"/>
                     </connections>
                 </viewController>
